# deep

./: .cursorrules  .gitignore  BRANCH_GUIDE.md  CLAUDE 2.md  CLAUDE.md  QuestHubRedesign.md  README.md  TODO.md  claude.md  cursor.mdc  feature_inventory.md  future_directions.md
.claude/agents/: adhd-productivity-consultant.md  ios-research-analyst.md
.cursor/rules/: chat_logic.mdc  feature_verification.mdc  roadmap_feature.mdc
agent_backend/: .env.example  README.md  main.py  requirements.txt  run.sh  test_server.py
agent_backend/bryan_agents/: __init__.py  calendar_agent.py  todo_agent.py
agent_backend/toolsets/: __init__.py  calendar_tools.py  todo_tools.py
agent_guidance/: README.md
archive/: TODO.md
archive/agent_backend/: pyproject.toml
archive/agent_backend/bryan_agents/: orchestrator_agent.py
deep_app/: CLOUDKIT_ENTITLEMENTS_FIX.md  CloudKit_Setup_Guide.md  DEVELOPER_ACCOUNT_SETUP.md  LOCAL_MODEL_ARCHITECTURE.md  TOOL_RESPONSE_FIX_SUMMARY.md  deep_appApp.swift
deep_app/deep_app/: AIAgentManager.swift  AppSettings.swift  AppleFoundationService.swift  AuthenticationService.swift  CalendarEvent.swift  CalendarService.swift  ChatView.swift  ChatViewModel.swift  CloudKitManager.swift  ContentView.swift  FOUNDATION_MODELS_GUIDE.md  FoundationModelTools.swift  FoundationModelsCrashWorkaround.md  FoundationModelsToolCalling.md  FoundationModelsToolResponseIssue.md  FoundationModelsToolTestingGuide.md  HealthKitService.swift  ImagePicker.swift  Info.plist  NotesView.swift  (+14 more)
deep_app/deep_app.xcodeproj/: project.pbxproj
docs/: OpenAI_API_CONVENTIONS.md
(+56 files in other folders)
